--- a/publication.html
+++ b/publication.html
@@ -93,7 +93,7 @@ arXiv:2312.14494, 2023<br>
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2312.04117v1"><b>instance tracking in 3D scenes from egocentric videos
+<a href="https://arxiv.org/abs/2312.04117v1"><b>Instance Tracking in 3D Scenes from Egocentric Videos
 </b></a>
 <br>
 Yunhan Zhao, Haoyu Ma, Shu Kong, Charless Fowlkes
@@ -144,7 +144,7 @@ arxiv:2312.03818, 2023<br>
 <br>
 <a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">MÉ Adaime</a>,  
 S. Kong, 
-<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>,
+<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>
 <br>
 Proceedings of the National Academy of Sciences (PNAS) Nexus, 2023<br>
 [<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798">paper</a>]
@@ -220,7 +220,7 @@ In  Datasets and Benchmarks, NeurIPS, 2023
 <a href="aimerykong_files/ov-parts.png">Wenwei Zhang </a>,
 Shu Kong, 
 <a href="https://xh-liu.github.io/">Xihui Liu</a>,
-<a href="https://oceanpang.github.io/">Jiangmiao Pang</a>,
+<a href="https://oceanpang.github.io/">Jiangmiao Pang</a>
 <br>
 In Datasets and Benchmarks, NeurIPS, 2023
 <br>
@@ -282,8 +282,8 @@ In WACV 2023
 <a href="https://mtli.github.io/">M. Li</a>,
 <a href="https://www.linkedin.com/in/francesco-ferroni-44708137/">F. Ferroni</a>,
 <a href="https://faculty.cc.gatech.edu/~hays/">J. Hays</a>,
-<a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>
-S. Kong<sup>#</sup>
+<a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>
+S. Kong
 <br>
 In WACV 2023
 <br>
@@ -308,8 +308,8 @@ In WACV 2023
 <a href="https://linzhiqiu.github.io/">Z. Lin</a>, 
 	<a href="https://www.cs.cmu.edu/~dpathak/">D. Pathak</a>, 
 	<a href="https://yxw.web.illinois.edu/">Y. Wang</a>, 
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, 
-	S. Kong<sup>#</sup> <br>
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>
+	S. Kong <br>
 In NeurIPS 2022
 <br>
 [<a href="https://linzhiqiu.github.io/papers/leco/">webpage</a>]
@@ -333,7 +333,7 @@ In NeurIPS 2022
 <br>
 <a href="http://www.neeharperi.com/">N. Peri</a>, 
 		<a href="https://www.achaldave.com/">A. Dave</a>, 
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, S. Kong <br>
 In CoRL 2022
 <br>
 [<a href="https://github.com/neeharperi/LT3D">webpage</a>] [<a href="https://arxiv.org/abs/2211.08691">paper</a>]
@@ -356,7 +356,7 @@ In CoRL 2022
 		<a href="https://www.linkedin.com/in/jinghao-shi-82371919b/">J. Shi</a><sup>*</sup>, 
 		<a href="https://www.linkedin.com/in/zelinye/">Z. Ye</a><sup>*</sup>, 
 		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">C. Mertz</a>,
-        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
+        <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a>, S. Kong <br>
 In ECCV 2022 (<font color=ff3399>oral presentation</font>)
 <br>
 [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">webpage</a>]
