--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
+	<p><a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a> </p>
+	</li>
+	<li>
+	<li>
 	<p><a href="https://vplow.github.io/vplow_3rd.html">The 3nd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a> </p>
 	</li>
 	<li>
