--- a/publication.html
+++ b/publication.html
@@ -134,7 +134,7 @@ arxiv:2312.03818, 2023<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798>
+<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798">
 <img src="aimerykong_files/phylogentic-placement.jpg" height="120"  border="0">
 </a><br>
 </td>
