--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
 	
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
-			I am looking for self-motivated PhD students starting in Spring/Fall 2024 at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
+			I am looking for self-motivated PhD students starting in Fall 2024 at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
-			Please feel free to contact me if interested.
 		</font>
-			I am NOT looking for PhD students starting in Spring/Fall 2024 at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
+			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
 		
 	</p>
 
@@ -73,7 +72,7 @@
 	<p><a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a> </p>
 	</li>
 	<li>
-	<p><a href="https://vplow.github.io/vplow_3rd.html">The 3nd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a> </p>
+	<p><a href="https://vplow.github.io/vplow_3rd.html">The 3rd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a> </p>
 	</li>
 	<li>
 	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a> </p>
