--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
 </ul>
 
 
+		
+<h3 style="font-size:20px;font-family:Times">Professional activities</h3>
+<ul style="font-size:13px;font-family:Times;line-height:15px">
+	
+	<li>
+		Demo Chair: CVPR'24		
+	</li>
+	<li>
+		Workshop Chair: Open-World Vision workshops at CVPR, WACV
+	</li>
+	<li>
+		Panalist: NSF
+	</li>	
+	<li>
+		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICLM, IJCV, PAMI, RA-L, TIP, Nature, etc.
+	</li>	
+</ul>
+
 
 
 
