--- a/index.html
+++ b/index.html
@@ -105,19 +105,18 @@
 
 		
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
-<ul style="font-size:13px;font-family:Times;line-height:15px">
-	
+<ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
-		Demo Chair: CVPR'24		
+		<p>Demo Chair: CVPR'24</p>		
 	</li>
 	<li>
-		Workshop Chair: Open-World Vision workshops at CVPR, WACV
+		<p>Workshop Chair: Open-World Vision workshops at CVPR, WACV</p>
 	</li>
 	<li>
-		Panalist: NSF
+		<p>Panalist: NSF</p>
 	</li>	
 	<li>
-		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICLM, IJCV, PAMI, RA-L, TIP, Nature, etc.
+		<p>Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICLM, IJCV, PAMI, RA-L, TIP, Nature, etc.</p>
 	</li>	
 </ul>
 
