--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<p>Panalist: NSF</p>
 	</li>	
 	<li>
-		<p>Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICLM, IJCV, PAMI, RA-L, TIP, Nature, etc.</p>
+		<p>Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICML, IJCV, PAMI, RA-L, TIP, Nature, PLOS One, etc.</p>
 	</li>	
 </ul>
 
