--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
-	<p><a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a> </p>
+	<a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a>
 	</li>
 	<li>
-	<p><a href="https://vplow.github.io/vplow_3rd.html">The 3rd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a> </p>
+	<a href="https://vplow.github.io/vplow_3rd.html">The 3rd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a>
 	</li>
 	<li>
-	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a> </p>
+	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a>
 	</li>
 	<li>
-	<p><a href="http://vplow.github.io/vplow.html">The 2nd Open World Vision Workshop: Visual Perception and Learning in an Open World (VPLOW) at CVPR'22</a> </p>
+	<a href="http://vplow.github.io/vplow.html">The 2nd Open World Vision Workshop: Visual Perception and Learning in an Open World (VPLOW) at CVPR'22</a>
 	</li>
 	<li>
-	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/">The 1st Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a> </p>
+	<a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop/">The 1st Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'22</a>
 	</li>
 	<li>
-	<p><a href="http://vplow.github.io/open-world-vision.html">The 1st Open World Vision Workshop at CVPR'21</a> </p>
+	<a href="http://vplow.github.io/open-world-vision.html">The 1st Open World Vision Workshop at CVPR'21</a>
 	</li>
 </ul>
 
@@ -92,13 +92,13 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
-		<p>[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World (Spring 2024, UMacau)</p>
+		[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World (Spring 2024, UMacau)
 	</li>
 	<li>
-		<p>[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)</p>
+		[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)
 	</li>
 	<li>
-	<p>[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU) </p>
+	[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU)
 	</li>
 </ul>
 
@@ -107,16 +107,16 @@
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
-		<p>Demo Chair: CVPR'24</p>		
+		Demo Chair: CVPR'24		
 	</li>
 	<li>
-		<p>Workshop Chair: Open-World Vision workshops at CVPR, WACV</p>
+		Workshop Chair: Open-World Vision workshops at CVPR, WACV
 	</li>
 	<li>
-		<p>Panalist: NSF</p>
+		Panalist: NSF
 	</li>	
 	<li>
-		<p>Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICML, IJCV, PAMI, RA-L, TIP, Nature, PLOS One, etc.</p>
+		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICML, IJCV, PAMI, RA-L, TIP, Nature, PLOS One, etc.
 	</li>	
 </ul>
 
