--- a/publication.html
+++ b/publication.html
@@ -53,7 +53,7 @@
 <a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via 2D Late Fusion
 </b></a>
 <br>
-Yechi Ma, Neehar Peri, Shuoquan Wei, Wei Hua, Deva Ramanan, Yanan Li, Shu Kong
+Y. Ma, N. Peri, S. Wei, W. Hua, D. Ramanan, Y. Li, S. Kong
 <br>
 arXiv:2312.10986, 2023<br>
 [<a href="https://arxiv.org/abs/2312.10986">paper</a>]
@@ -73,7 +73,7 @@ arXiv:2312.10986, 2023<br>
 <a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
 </b></a>
 <br>
-Anish Madan, Neehar Peri, Shu Kong, Deva Ramanan
+A. Madan, N. Peri, S. Kong, D. Ramanan
 <br>
 arXiv:2312.14494, 2023<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
@@ -96,7 +96,7 @@ arXiv:2312.14494, 2023<br>
 <a href="https://arxiv.org/abs/2312.04117v1"><b>Instance Tracking in 3D Scenes from Egocentric Videos
 </b></a>
 <br>
-Yunhan Zhao, Haoyu Ma, Shu Kong, Charless Fowlkes
+Y. Zhao, H. Ma, S. Kong, C. Fowlkes
 <br>
 arXiv:2312.04117, 2023<br>
 [<a href="https://arxiv.org/abs/2312.04117v1">paper</a>]
@@ -117,7 +117,7 @@ arXiv:2312.04117, 2023<br>
 <td>
 <a href="https://arxiv.org/abs/2312.03818"><b>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</b></a>
 <br>
-Zeyi Sun, Ye Fang, Tong Wu, Pan Zhang, Yuhang Zang, Shu Kong, Yuanjun Xiong, Dahua Lin, Jiaqi Wang
+Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
 <br>
 arxiv:2312.03818, 2023<br>
 [<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
@@ -215,12 +215,12 @@ In  Datasets and Benchmarks, NeurIPS, 2023
 <td>
 <a href="https://neurips.cc/virtual/2023/poster/73650"><b>OV-PARTS: Towards Open-Vocabulary Part Segmentation</b></a>
 <br>
-<a href="aimerykong_files/ov-parts.png">Meng Wei</a>,
-<a href="aimerykong_files/ov-parts.png">Xiaoyu Yue</a>,
-<a href="aimerykong_files/ov-parts.png">Wenwei Zhang </a>,
-Shu Kong, 
-<a href="https://xh-liu.github.io/">Xihui Liu</a>,
-<a href="https://oceanpang.github.io/">Jiangmiao Pang</a>
+<a href="aimerykong_files/ov-parts.png">M. Wei</a>,
+<a href="aimerykong_files/ov-parts.png">X. Yue</a>,
+<a href="aimerykong_files/ov-parts.png">W. Zhang </a>,
+S. Kong, 
+<a href="https://xh-liu.github.io/">X. Liu</a>,
+<a href="https://oceanpang.github.io/">J. Pang</a>
 <br>
 In Datasets and Benchmarks, NeurIPS, 2023
 <br>
@@ -229,6 +229,28 @@ In Datasets and Benchmarks, NeurIPS, 2023
 <br>
 </td>
 
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">
+<img src="aimerykong_files/KD-dino.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2305.17007"><b>Improving Knowledge Distillation via Regularizing Feature Norm and Direction
+</b></a>
+<br>
+Y. Wang, L. Cheng, M. Duan, Y. Wang, Z. Feng, S. Kong
+<br>
+arXiv:2305.17007, 2023
+<br>
+[<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
+[<a href="https://arxiv.org/abs/2305.17007">paper</a>]
+<br>
+</td>
 
 
 
