--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
-		[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World (Spring 2024, UMacau)
+		[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf
+">syllabus</a>] (Spring 2024, UMacau)
 	</li>
 	<li>
 		[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)
