--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
 	<li>
-		Demo Chair: CVPR'24		
+		Demo Chair: <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR'24</a>		
 	</li>
 	<li>
-		Workshop Chair: Open-World Vision workshops at CVPR, WACV
+		Workshop Chair: <a href="https://vplow.github.io/">Open-World Vision workshops at CVPR, WACV</a>
 	</li>
 	<li>
-		Panalist: NSF
+		Panalist: NSF GRFP
 	</li>	
 	<li>
 		Reviewers/program committee: CVPR, ICCV, ECCV, ICLR, NeurIPS, ICML, IJCV, PAMI, RA-L, TIP, Nature, PLOS One, etc.
