--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,26 @@
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="https://chi2024.acm.org/">
+<img src="aimerykong_files/AccessLens.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://chi2024.acm.org/"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
+<br>
+Nahyun Kwon, Qian Lu, Muhammad Hasham Qazi, Joanne Liu, Changhoon Oh, Shu Kong, Jeeeun Kim
+<br>
+CHI, 2024<br>
+[<a href="https://chi2024.acm.org/">paper</a>]
+<br>
+</td>
+		
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://arxiv.org/abs/2312.10986">
