--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
 <ul style="font-size:13px;font-family:Times">
 
 
+<li>
+<p>
+Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the CHI'24
+<img src="./aimerykong_files/CHI2024.jpg", height="20"></a> 
+	paper "<a href="./"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
+</a>
+</li>
 
 <li>
 <p>
