--- a/group.html
+++ b/group.html
@@ -34,6 +34,7 @@
 		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU)</li>
 		<li><a href="./">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
+		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
@@ -61,6 +62,10 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
+		<li>Keiran Xinyu Wang (UMacau)</li>
+		<li>Anna Yuting Cao (UMacau)</li>
+		<li>Bruce Zhuxuan Chen (UMacau)</li>
+		<li>Louise Ruoxuan Li (UMacau)</li>
 		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD, now PhD at CMU)</li>
 	</ul>
@@ -75,6 +80,8 @@
 <h4>Affiliates and Collaborators</h4>
 	<ul>
 		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
+		</li>
+		<li><a href="https://directory.education.tamu.edu/view/wenhsuan.chang">Wen-Hsuan Chang</a>, Assistant Professor, TAMU-EPSY
 		</li>
 		<li><a href="https://people.engr.tamu.edu/caverlee/index.html">James Caverlee</a>, Professor, TAMU-CSE
 		</li>
