--- a/publication.html
+++ b/publication.html
@@ -44,6 +44,26 @@
 
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2401.12425">
+<img src="aimerykong_files/VLM-LT.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2401.12425"><b>The Neglected Tails of Vision-Language Models</b></a>
+<br>
+S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
+<br>
+	arXiv:2401.12425, 2024<br>
+[<a href="https://arxiv.org/abs/2401.12425">paper</a>]
+<br>
+</td>
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://chi2024.acm.org/">
