--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@
 S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
 	arXiv:2401.12425, 2024<br>
-[<a href="https://arxiv.org/abs/2401.12425">paper</a>]
+[<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>][<a href="https://arxiv.org/abs/2401.12425">paper</a>]
 <br>
 </td>
 
