--- a/publication.html
+++ b/publication.html
@@ -66,17 +66,17 @@ S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 
 <tr>
 <td width="35%" height=150>
-<a href="https://chi2024.acm.org/">
+<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">
 <img src="aimerykong_files/AccessLens.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://chi2024.acm.org/"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
+<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
 <br>
 Nahyun Kwon, Qian Lu, Muhammad Hasham Qazi, Joanne Liu, Changhoon Oh, Shu Kong, Jeeeun Kim
 <br>
 CHI, 2024<br>
-[<a href="https://chi2024.acm.org/">paper</a>]
+[<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">paper</a>]
 <br>
 </td>
 		
