--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <p>
 Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the CHI'24
 <img src="./aimerykong_files/CHI2024.jpg", height="20"></a> 
-	paper "<a href="./"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
+	paper "<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
 </a>
 </li>
 
