--- a/publication.html
+++ b/publication.html
@@ -57,10 +57,69 @@
 <br>
 S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
-	arXiv:2401.12425, 2024<br>
+<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>][<a href="https://arxiv.org/abs/2401.12425">paper</a>]
 <br>
 </td>
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.04117">
+<img src="aimerykong_files/IT3DEgo.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.04117"><b>Instance Tracking in 3D Scenes from Egocentric Videos
+</b></a>
+<br>
+Y. Zhao, H. Ma, S. Kong, C. Fowlkes
+<br>
+<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+[<a href="https://arxiv.org/abs/2312.04117">paper</a>]
+<br>
+</td>
+		
+
+	
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.03818">
+<img src="aimerykong_files/alpha-CLIP.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.03818"><b>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</b></a>
+<br>
+Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
+<br>
+<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+[<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
+[<a href="https://huggingface.co/papers/2312.03818">code</a>]
+[<a href="https://aleafy.github.io/alpha-clip/">webpage</a>]
+<br>
+</td>
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://cvpr.thecvf.com/Conferences/2024">
+<img src="aimerykong_files/imageRestoration-deep-prior.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://cvpr.thecvf.com/Conferences/2024"><b>Boosting Image Restoration via Priors from Pre-trained Models
+</b></a>
+<br>
+X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
+<br>
+<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+[<a href="https://cvpr.thecvf.com/Conferences/2024">paper</a>]
+<br>
+</td>
+		
 
 	
 
@@ -143,47 +202,6 @@ arXiv:2312.14494, 2023<br>
 
 
 
-
-
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2312.04117v1">
-<img src="aimerykong_files/IT3DEgo.png" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2312.04117v1"><b>Instance Tracking in 3D Scenes from Egocentric Videos
-</b></a>
-<br>
-Y. Zhao, H. Ma, S. Kong, C. Fowlkes
-<br>
-arXiv:2312.04117, 2023<br>
-[<a href="https://arxiv.org/abs/2312.04117v1">paper</a>]
-<br>
-</td>
-		
-
-
-
-
-
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2312.03818">
-<img src="aimerykong_files/alpha-CLIP.png" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2312.03818"><b>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</b></a>
-<br>
-Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
-<br>
-arxiv:2312.03818, 2023<br>
-[<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
-[<a href="https://huggingface.co/papers/2312.03818">code</a>]
-[<a href="https://aleafy.github.io/alpha-clip/">webpage</a>]
-<br>
-</td>
 
 
 
