--- a/publication.html
+++ b/publication.html
@@ -134,7 +134,7 @@ X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
 Nahyun Kwon, Qian Lu, Muhammad Hasham Qazi, Joanne Liu, Changhoon Oh, Shu Kong, Jeeeun Kim
 <br>
-CHI, 2024<br>
+<a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
 [<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">paper</a>]
 <br>
 </td>
