--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
 
 <li>
 <p>
+Congratulations to <a href="https://nahyunkwon.github.io/">Shubham</a>, <a href="https://hcied.info/hcieders.html">Tian</a>, 
+	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the CVPR'24
+<img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
+	paper "<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms"  target="_blank">The Neglected Tails of Vision-Language Models</a>"! (2/27/2024)
+</a>
+</li>
+
+
+	
+
+<li>
+<p>
 Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the CHI'24
 <img src="./aimerykong_files/CHI2024.jpg", height="20"></a> 
 	paper "<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
