--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <li>
 <p>
-Congratulations to <a href="https://nahyunkwon.github.io/">Shubham</a>, <a href="https://hcied.info/hcieders.html">Tian</a>, 
+Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://scholar.google.com/citations?user=qgmIiSsAAAAJ&hl=en">Tian</a>, 
 	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms"  target="_blank">The Neglected Tails of Vision-Language Models</a>"! (2/27/2024)
