--- a/index.html
+++ b/index.html
@@ -142,6 +142,22 @@ Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a h
 </li>
 
 
+<li>
+<p>
+Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a> on the CVPR'24
+<img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
+	paper "<a href="https://arxiv.org/abs/2312.04117"  target="_blank">Instance Tracking in 3D Scenes from Egocentric Videos</a>"! (2/27/2024)
+</a>
+</li>
+
+
+<li>
+<p>
+Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="https://github.com/Aleafy">Ye</a> on the CVPR'24
+<img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
+	paper "<a href="https://aleafy.github.io/alpha-clip/"  target="_blank">Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</a>"! (2/27/2024)
+</a>
+</li>
 	
 
 <li>
