--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@ Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="htt
 	paper "<a href="https://aleafy.github.io/alpha-clip/"  target="_blank">Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</a>"! (2/27/2024)
 </a>
 </li>
+
+
+
+<li>
+<p>
+Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the CVPR'24
+<img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
+	paper "<a href="http://xuxiaogang.com/"  target="_blank">Boosting Image Restoration via Priors from Pre-trained Models</a>"! (2/27/2024)
+</a>
+</li>
+	
+
 	
 
 <li>
