--- a/publication.html
+++ b/publication.html
@@ -132,7 +132,7 @@ X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <td>
 <a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
 <br>
-Nahyun Kwon, Qian Lu, Muhammad Hasham Qazi, Joanne Liu, Changhoon Oh, Shu Kong, Jeeeun Kim
+N. Kwon, Q. Lu, M. H. Qazi, J. Liu, C. Oh, S. Kong, J. Kim
 <br>
 <a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
 [<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">paper</a>]
