--- a/group.html
+++ b/group.html
@@ -32,7 +32,7 @@
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
 		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU)</li>
-		<li><a href="./">Tian Liu</a> (PhD at TAMU)</li>
+		<li><a href="https://www.linkedin.com/in/tian1327/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
@@ -62,6 +62,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
+		<li>Yoger Un Lok Chen (UMacau)</li>
 		<li>Keiran Xinyu Wang (UMacau)</li>
 		<li>Anna Yuting Cao (UMacau)</li>
 		<li>Bruce Zhuxuan Chen (UMacau)</li>
