--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <li>
 <p>
-Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://scholar.google.com/citations?user=qgmIiSsAAAAJ&hl=en">Tian</a>, 
+Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://www.linkedin.com/in/tian1327/">Tian</a>, 
 	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
 	paper "<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms"  target="_blank">The Neglected Tails of Vision-Language Models</a>"! (2/27/2024)
@@ -176,7 +176,7 @@ Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the CVPR'24
 <p>
 Congratulations to <a href="https://nahyunkwon.github.io/">Nahyun</a>, <a href="https://hcied.info/hcieders.html">Emory, Muhammad, and Joanne</a> on the CHI'24
 <img src="./aimerykong_files/CHI2024.jpg", height="20"></a> 
-	paper "<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
+	paper "<a href="https://arxiv.org/abs/2401.15996"  target="_blank">AccessLens: Auto-detecting Inaccessibility of Everyday Objects</a>"! (1/19/2024)
 </a>
 </li>
 
