--- a/publication.html
+++ b/publication.html
@@ -116,7 +116,7 @@ Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
 X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
 <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
-[<a href="https://cvpr.thecvf.com/Conferences/2024">paper</a>]
+[paper]
 <br>
 </td>
 		
@@ -125,17 +125,17 @@ X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 
 <tr>
 <td width="35%" height=150>
-<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">
+<a href="https://arxiv.org/abs/2401.15996">
 <img src="aimerykong_files/AccessLens.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
+<a href="https://arxiv.org/abs/2401.15996"><b>AccessLens: Auto-detecting Inaccessibility of Everyday Objects</b></a>
 <br>
 N. Kwon, Q. Lu, M. H. Qazi, J. Liu, C. Oh, S. Kong, J. Kim
 <br>
 <a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
-[<a href="https://nahyunkwon.github.io/papers/CHI24-AccessLens-Auto-detecting%20Inaccessibility%20of%20Everyday%20Objects.pdf">paper</a>]
+[<a href="https://arxiv.org/abs/2401.15996">paper</a>]
 <br>
 </td>
 		
