--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,7 @@
 <br>
 S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
-<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>][<a href="https://arxiv.org/abs/2401.12425">paper</a>]
 <br>
 </td>
@@ -75,7 +75,7 @@ S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
 Y. Zhao, H. Ma, S. Kong, C. Fowlkes
 <br>
-<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2312.04117">paper</a>]
 <br>
 </td>
@@ -94,7 +94,7 @@ Y. Zhao, H. Ma, S. Kong, C. Fowlkes
 <br>
 Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
 <br>
-<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
 [<a href="https://huggingface.co/papers/2312.03818">code</a>]
 [<a href="https://aleafy.github.io/alpha-clip/">webpage</a>]
@@ -115,7 +115,7 @@ Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
 <br>
 X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
-<a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
+In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [paper]
 <br>
 </td>
@@ -134,7 +134,7 @@ X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
 <br>
 N. Kwon, Q. Lu, M. H. Qazi, J. Liu, C. Oh, S. Kong, J. Kim
 <br>
-<a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
+In <a href="https://chi2024.acm.org/">CHI</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2401.15996">paper</a>]
 <br>
 </td>
@@ -256,7 +256,7 @@ In EMNLP, 2023
 <a href="aimerykong_files/insdet.png">Y. Li</a>,
 S. Kong
 <br>
-In  Datasets and Benchmarks, NeurIPS, 2023
+In NeurIPS Datasets and Benchmarks, 2023
 <br>
 [<a href="https://github.com/insdet">github</a>]
 [<a href="https://neurips.cc/virtual/2023/poster/73409">paper</a>]
@@ -280,7 +280,7 @@ S. Kong,
 <a href="https://xh-liu.github.io/">X. Liu</a>,
 <a href="https://oceanpang.github.io/">J. Pang</a>
 <br>
-In Datasets and Benchmarks, NeurIPS, 2023
+In NeurIPS Datasets and Benchmarks, 2023
 <br>
 [<a href="https://github.com/OpenRobotLab/OV_PARTS">github</a>]
 [<a href="https://neurips.cc/virtual/2023/poster/73650">paper</a>]
