--- a/publication.html
+++ b/publication.html
@@ -242,7 +242,7 @@ In EMNLP, 2023
 
 <tr>
 <td width="35%" height=150>
-<a href="https://github.com/insdet">
+<a href="https://github.com/insdet/instance-detection">
 <img src="aimerykong_files/insdet.png" height="120"  border="0">
 </a><br>
 </td>
@@ -258,7 +258,7 @@ S. Kong
 <br>
 In NeurIPS Datasets and Benchmarks, 2023
 <br>
-[<a href="https://github.com/insdet">github</a>]
+[<a href="https://github.com/insdet/instance-detection">github</a>]
 [<a href="https://neurips.cc/virtual/2023/poster/73409">paper</a>]
 <br>
 </td>
