--- a/publication.html
+++ b/publication.html
@@ -156,6 +156,7 @@ S. Kong,
 <br>
 Proceedings of the National Academy of Sciences (PNAS) Nexus, 2024<br>
 [<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798">paper</a>]
+[<a href="https://www.igb.illinois.edu/article/machine-learning-used-classify-fossils-extinct-pollen">News</a>]
 <br>
 </td>
 	
