--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Congratulations to <a href="https://github.com/SunzeY">Zeyi</a> and <a href="htt
 <p>
 Congratulations to <a href="http://xuxiaogang.com/">Xiaogang</a> on the CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
-	paper "<a href="http://xuxiaogang.com/"  target="_blank">Boosting Image Restoration via Priors from Pre-trained Models</a>"! (2/27/2024)
+	paper "<a href="https://arxiv.org/pdf/2403.06793.pdf"  target="_blank">Boosting Image Restoration via Priors from Pre-trained Models</a>"! (2/27/2024)
 </a>
 </li>
 	
