--- a/publication.html
+++ b/publication.html
@@ -105,12 +105,12 @@ In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="https://cvpr.thecvf.com/Conferences/2024">
+<a href="https://arxiv.org/pdf/2403.06793.pdf">
 <img src="aimerykong_files/imageRestoration-deep-prior.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://cvpr.thecvf.com/Conferences/2024"><b>Boosting Image Restoration via Priors from Pre-trained Models
+<a href="https://arxiv.org/pdf/2403.06793.pdf"><b>Boosting Image Restoration via Priors from Pre-trained Models
 </b></a>
 <br>
 X. Xu, S. Kong, T. Hu, Z. Liu, H. Bao
