--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
 
 
 
-<h3 style="font-size:20px;font-family:Times">
-<font color="#8B0000">
-Call for demos at CVPR'24! If you have exciting demos, consider to submit and present at CVPR in June at Seattle! The submission is trivial and its deadline is this Sunday, Mar 10, 2024 11:59 PM AOE. <a href='https://cvpr.thecvf.com/Conferences/2024/CallForDemos'>Here is the link to submit</a>.
-</font>
-</h3>
 		
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">	
@@ -140,6 +135,16 @@ Call for demos at CVPR'24! If you have exciting demos, consider to submit and pr
 <ul style="font-size:13px;font-family:Times">
 
 
+<li>
+<p>
+Call for demos at <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20">CVPR'24</a>! If you have exciting demos, 
+	consider to submit and present at CVPR in June at Seattle! 
+	The submission is trivial and its deadline is this Sunday, Mar 10, 2024 11:59 PM AOE. 
+	<a href='https://cvpr.thecvf.com/Conferences/2024/CallForDemos'>Here is the link to submit</a>.
+</li>
+
+
+	
 <li>
 <p>
 Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://www.linkedin.com/in/tian1327/">Tian</a>, 
