--- a/index.html
+++ b/index.html
@@ -39,14 +39,25 @@
 	</p>
 	
 	<p style="font-size:16px;font-family:Times">
+		My research lies in <strong>Computer Vision</strong>, and its interactions with other fields (e.g., machine learning, robotics, NLP, HCI, and graphics), 
+		applications (e.g., AR/VR, autonomous driving, etc.), and disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
+		My current research focus is on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
+		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
+		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
+		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
+	</p>
+
+
+					
+	<!--p style="font-size:16px;font-family:Times">
 		My research interests span <strong>Computer Vision</strong> and <strong>applied Machine Learning</strong> (CV/ML), 
 		and their applications to autonomous vehicles and research in natural science. 
 		My current research in CV/ML focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
 		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
 		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
-	</p>
-	
+				</p-->
+					
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
 			I am actively looking for self-motivated PhD students at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
