--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	</p>
 	
 	<p style="font-size:16px;font-family:Times">
-		My research lies in <strong>Computer Vision</strong>, and its interactions with other fields (e.g., machine learning, robotics, NLP, HCI, and graphics), 
-		applications (e.g., AR/VR, autonomous driving, etc.), and disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
+		My research lies in <strong>Computer Vision</strong>, and its interactions with other fields (e.g., machine learning, robotics, NLP, HCI, and graphics), broad
+		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
 		My current research focus is on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
 		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
